Autokey keys disabled driver values #73524

Closed
opened 2020-01-31 10:58:52 +01:00 by Wayne Dixon · 4 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-01-30 11:04, hash: 2142288eae
Worked: (optional)

Short description of error
When you have autokeying turned on for LocRotScale, then disable a driver (for say a shape key) and then manually tweak the value. Blender will key this change in the driver editor.

Exact steps for others to reproduce the error

  • turn on autokey (keying set LocRotScale will do)
  • create a property on the default cube
  • copy as new driver
  • create a shape key
  • paste this driver to this shape key
  • then disable the curve for this driver in the driver editor (check box)
  • manually tweak the driver value and this will be keyed in the driver editor.

autokey_disabled_drivers.blend

auto_keying_disabled_drivers.mp4

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-01-30 11:04, hash: `2142288eae` Worked: (optional) **Short description of error** When you have autokeying turned on for LocRotScale, then disable a driver (for say a shape key) and then manually tweak the value. Blender will key this change in the driver editor. **Exact steps for others to reproduce the error** - turn on autokey (keying set LocRotScale will do) - create a property on the default cube - copy as new driver - create a shape key - paste this driver to this shape key - then disable the curve for this driver in the driver editor (check box) - manually tweak the driver value and this will be keyed in the driver editor. [autokey_disabled_drivers.blend](https://archive.blender.org/developer/F8314250/autokey_disabled_drivers.blend) [auto_keying_disabled_drivers.mp4](https://archive.blender.org/developer/F8314248/auto_keying_disabled_drivers.mp4)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This seems to be a limitation of the current implementation of autokeying, rather than a bug. You can see in the ED_autokeyframe_property() in keyframing.c line 3001 and further that there is simply a check on the autokey on/off state, and not a check on the active keying set or on the active/inactive state of the curve.

This seems to be a limitation of the current implementation of autokeying, rather than a bug. You can see in the `ED_autokeyframe_property()` in [keyframing.c line 3001 and further](https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/animation/keyframing.c$3001) that there is simply a check on the autokey on/off state, and not a check on the active keying set or on the active/inactive state of the curve.
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:36:16 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-12 16:33:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73524
No description provided.